Feat: imported the heading, body and link fonts into the html and styled it accordingly in css

--- a/index.html
+++ b/index.html
@@ -5,26 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Audromida Designs</title>
     <link rel="stylesheet" href="css/home.css">
+    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Sora:wght@100..800&display=swap" rel="stylesheet">
 
-    <!-- Primary Meta Tags -->
-    <title>Meta Tags — Preview, Edit and Generate</title>
-    <meta name="title" content="Audromida Designs" />
-    <meta name="description" content="My name is Audrey, a 3rd years Digital Experience Design student with a huge passion for design." />
+    <!-- Meta Description -->
+    <meta name="description" content="My name is Audrey, a 3rd years Digital Experience Design student with a huge passion for design."/>
+    <meta name="autor" content="Audrey Kudjo"/>
+    <meta name="robots" content="index, follow">
+
+    <!--Cannonical URL-->
+    <link rel="canonical" href="https://audromida.tech/">
+
+    <!--Favicon-->
+    <link rel="icon" href="#" type="image/x-icon">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://http://audromida.tech/"/>
+    <meta property="og:url" content="https://audromida.tech/"/>
     <meta property="og:title" content="Audromida Designs"/>
     <meta property="og:description" content="My name is Audrey, a 3rd years Digital Experience Design student with a huge passion for design." />
-    <!--<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />-->
+    <meta property="og:image" content="https://audromida.tech/img/preview-img.png" />
 
     <!-- X (Twitter) -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://http://audromida.tech/"/>
+    <meta property="twitter:url" content="https://audromida.tech/"/>
     <meta property="twitter:title" content="Audromida Designs"/>
     <meta property="twitter:description" content="My name is Audrey, a 3rd years Digital Experience Design student with a huge passion for design." />
-    <!--<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />-->
-
+    <meta property="twitter:image" content="https://audromida.tech/img/preview-img.png"/>
     <!-- Meta Tags Generated with https://metatags.io -->
 
     <!-- Hotjar Tracking Code for https://audromida.tech/ -->
@@ -49,6 +56,16 @@
     </nav>
 
     <header class="hero">
+        <div class="bubble-container">
+            <span class="bubble pink"></span>
+            <span class="bubble white"></span>
+            <span class="bubble pink"></span>
+            <span class="bubble white"></span>
+            <span class="bubble pink"></span>
+            <span class="bubble white"></span>
+            <span class="bubble pink"></span>
+            <span class="bubble white"></span>
+        </div>
         <div class="hero-text">
             <h1>Hey, I am Audrey 👋🏽</h1>
             <h2>Frontend Designer / Developer</h2>
@@ -72,14 +89,14 @@
                 </p>
             </div>
             <div class="about-content">
-                <!-- SCHOOL SECTION -->
-                <div class="school">
-                    <div class="school-label-list">
-                    <h3>School:</h3>
+                <!-- COURSE SECTION -->
+                <div class="courses">
+                    <div class="course-label-list">
+                    <h3>Courses:</h3>
                     <ul>
-                        <li>Visual Merchandising (2016)</li>
-                        <li>Webdesign (2024)</li>
-                        <li>Digital Experienxe Design (2026)</li>
+                        <li>Bachelor Digital Experienxe Design - Thomas More Mechelen (2026)</li>
+                        <li>Webdesigner - GO! Crescendo (2023)</li>
+                        <li>Visual Merchandising BSO Verkoop - OLVI Boom (2016)</li>
                     </ul>
                 </div>
 
@@ -236,8 +253,8 @@
                 <div class="project-info hidden">
                     <h2>Zuiderbad</h2>
                     <p><strong>Design:</strong> Figma, Blender, Illustrator</p>
-                    <p><strong>Development:</strong> HTML, CSS, JavaScript</p>
-                    <p><strong>Description:</strong> Last schoolyear we've been given the opportunity to work with a real client! Our class got devided in 3 groups and each group was given a different client. The group that I was part of worked with <a href="https://www.zuiderbad.be/">Zuiderbad</a>, a horeca and event bureau in Mechelen. They asked us to design an online map so people would better navigate themselves around the domain. And let me tell you, I loved working on this project!</p>
+                    <p><strong>Development:</strong> HTML, CSS, JavaScript & Three.js</p>
+                    <p><strong>Description:</strong> Last schoolyear we've been given the opportunity to work with a real client! Our class got devided in 3 groups and each group was given a different client. My group worked with <a href="https://www.zuiderbad.be/">Zuiderbad</a>, a horeca and event bureau in Mechelen. <br> They asked us to create an online map so people could navigate themselves better around the domain. My role within the project was to design the UI of the map and how it would look integrated on the existing website. </p>
 
                     <div class="carousel">
                         <div class="carousel-images">
@@ -290,17 +307,17 @@
                 <h2>Contact</h2>
                 <div class="contact-info">
                     <img src="icons/mailandphonenr.png" alt="email and phone number icon">
-                    <h3>Email: fake@email.com<br>
-                        Phone nr: 04 000 000</h3>
+                    <h3><strong class="info-title">Email: </strong>fake@email.com<br>
+                    <strong class="info-title">Phone nr: </strong>04 000 000</h3>
                 </div>
                 </div>
                 <div class="contact-info">
                     <img src="icons/linkedin.png" alt="linkedIn icon">
-                    <h3>LinkedIn: <a href="https://be.linkedin.com/in/audrey-kudjo-6a6281386">Audrey Kudjo</a></h3>
+                    <h3><strong class="info-title">LinkedIn: </strong><a href="https://be.linkedin.com/in/audrey-kudjo-6a6281386">Audrey Kudjo</a></h3>
                 </div>
                  <div class="contact-info">
                     <img src="icons/cv.png" alt="curriculum vitae icon">
-                    <h3><a href="#">Download my CV</a></h3>
+                    <h3><strong class="info-title">Extra: </strong><a href="#">Download my CV</a></h3>
                 </div>
                 <p class="contact-description">If you're interested in working together or have any questions, feel free to reach out!</p>
             </section>
