Style: changed the h3 a text in contact info and added margin-bottom

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                 </div>
                 <div class="contact-info">
                     <img src="icons/linkedin.png" alt="linkedIn icon">
-                    <h3><strong class="info-title">LinkedIn: </strong><a href="https://be.linkedin.com/in/audrey-kudjo-6a6281386">Audrey Kudjo</a></h3>
+                    <h3><strong class="info-title">LinkedIn: </strong><a href="https://be.linkedin.com/in/audrey-kudjo-6a6281386">Audrey Designs</a></h3>
                 </div>
                  <div class="contact-info">
                     <img src="icons/cv.png" alt="curriculum vitae icon">
