Feat: changed navBar layout to create a hamburger logo + made the website responsive

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Meta Description -->
     <meta name="description" content="My name is Audrey, a 3rd years Digital Experience Design student with a huge passion for design."/>
-    <meta name="autor" content="Audrey Kudjo"/>
+    <meta name="author" content="Audrey Kudjo"/>
     <meta name="robots" content="index, follow">
 
     <!--Cannonical URL-->
@@ -48,11 +48,20 @@
 </head>
 <body>
     <nav class="navBar">
-        <a href="Audromida.html">Audromida</a>
-        <a href="#aboutme">About me</a>
-        <a href="#services">Services</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
+        <div class="nav-logo">Audromida</div>
+
+        <div class="hamburger" id="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+
+        <div class="nav-links" id="navLinks">
+            <a href="#aboutme">About me</a>
+            <a href="#services">Services</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
+        </div>
     </nav>
 
     <header class="hero">
@@ -152,7 +161,7 @@
 
                              <p>PHP</p>
                             <div class="progress-bar">
-                                <div class="skill php">60%%</div>
+                                <div class="skill php">60%</div>
                             </div>
                         </div>
                     </div>
