Style: re-positioned the hamburger menu in mobile view and made it work properly

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 <body>
     <nav class="navBar">
-        <div class="nav-logo">Audromida</div>
+        <div class="navLogo">Audromida</div>
 
         <div class="hamburger" id="hamburger">
             <span></span>
@@ -56,7 +56,7 @@
             <span></span>
         </div>
 
-        <div class="nav-links" id="navLinks">
+        <div class="navLinks" id="navLinks">
             <a href="#aboutme">About me</a>
             <a href="#services">Services</a>
             <a href="#projects">Projects</a>
@@ -318,7 +318,6 @@
                     <img src="icons/mailandphonenr.png" alt="email and phone number icon">
                     <h3><strong class="info-title">Email: </strong>fake@email.com<br>
                     <strong class="info-title">Phone nr: </strong>04 000 000</h3>
-                </div>
                 </div>
                 <div class="contact-info">
                     <img src="icons/linkedin.png" alt="linkedIn icon">
