--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Audromida Designs</title>
     <link rel="stylesheet" href="css/home.css">
+    
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Sora:wght@100..800&display=swap" rel="stylesheet">
 
@@ -58,6 +59,7 @@
 
         <div class="navLinks" id="navLinks">
             <a href="#aboutme">About me</a>
+            <a href="blog.html" class="blogLink">Blog</a>
             <a href="#services">Services</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
