Style: changed titles and font-size for the blogposts

--- a/blog.html
+++ b/blog.html
@@ -40,7 +40,7 @@
             </article>
 
             <article class="blogPost">
-                <h3>Top 5 Tools I can't live without</h3>
+                <h3>Hi there! Welcome on my blog</h3>
                 <p class="date">05-10-2025</p>
                 <p>
                     A common form of Lorem ipsum reads: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -51,7 +51,7 @@
     </main>
 
     <footer>
-        <p>&copy;2025 Audromida</p>
+        <p>&copy; 2025 Audromida</p>
     </footer>
 
     <script src="home.js"></script>
