Add: added dog vector img into a new animation-asset folder

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <h3>Skills:</h3>
                     <div class="skills-tabs">
                         <div class="skills-btns">
-                            <button class="tab-btn active" onclick="showTab('design', event)">Desgin</button>
+                            <button class="tab-btn active" onclick="showTab('design', event)">Design</button>
                             <button class="tab-btn" onclick="showTab('development', event)">Development</button>
                         </div>
 
@@ -374,6 +374,8 @@
     </main>
 
     <footer>
+        <!--Daisy walking animation here-->
+        
         <!-- FOOTER SECTION -->
         <p>&copy; 2025 Audromida Designs. All rights reserved.</p>
     </footer>
