Feat: made the daisy walking animation  in index.html but moved this to blog.html

--- a/blog.html
+++ b/blog.html
@@ -70,6 +70,8 @@
 
     <footer>
         <p>&copy; 2025 Audromida</p>
+         <!--Daisy walking animation here-->
+        <div class="daisyWalk"></div>
     </footer>
 
     <script src="home.js"></script>
