Add: added a blog section to the homepage of my portfolio

--- a/index.html
+++ b/index.html
@@ -190,6 +190,8 @@
         </div>
         </section>
 
+        <section id="latestBlog"></section>
+
         <!--SERVICES SECTION-->
         <section class="services" id="services">
             <h2>Services</h2>
