--- a/blog.html
+++ b/blog.html
@@ -54,7 +54,7 @@
                 <p>
                     A common form of Lorem ipsum reads: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </p>
-                <a href="#">Read more</a>
+                <a href="blog-posts/blog-post1.html">Read more →</a>
             </article>
 
             <article class="blogPost">
@@ -63,7 +63,7 @@
                 <p>
                     A common form of Lorem ipsum reads: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </p>
-                <a href="#">Read more</a>
+                <a href="blog-posts/blog-post2.html">Read more →</a>
             </article>
         </section>
     </main>
