--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <div class="navLinks" id="navLinks">
             <a href="#aboutme">About me</a>
-            <a href="blog.html" class="blogLink">Blog</a>
+            <a href="#latestBlog" class="blogLink">Blog</a>
             <a href="#services">Services</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
