--- a/blog-posts/blog-post1.html
+++ b/blog-posts/blog-post1.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="/css/blog.css">
 </head>
 <body class="singleBlogPost">
+    <div class="sideImgContainer">
+        <img src="/icons/avatarSitting.png" alt="Sitting avatar">
+    </div>
     <nav class="navBar">
         <div class="navLogo"><a href="../index.html">Audromida</a></div>
 
