Style: added the avatarWave in the second blogpast and positioned the waving image next to the fullPost container in css

--- a/blog-posts/blog-post2.html
+++ b/blog-posts/blog-post2.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="/css/blog.css">
 </head>
 <body class="singleBlogPost">
+     <div class="waveImgContainer">
+        <img src="/icons/avatarWave.png" alt="Sitting avatar">
+    </div>
     <nav class="navBar">
         <div class="navLogo"><a href="../index.html">Audromida</a></div>
 
@@ -28,7 +31,7 @@
 
     <main>
         <article class="blogPost fullPost">
-            <h2>Hi there! Welcome on my blog</h2>
+            <h2>Hi there! Welcome to my blog</h2>
             <p class="date">05-10-2025</p>
 
             <p>
