--- a/blog.html
+++ b/blog.html
@@ -58,7 +58,7 @@
             </article>
 
             <article class="blogPost">
-                <h3>Hi there! Welcome on my blog</h3>
+                <h3>Hi there! Welcome to my blog</h3>
                 <p class="date">05-10-2025</p>
                 <p>
                     A common form of Lorem ipsum reads: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
