Feat: finished the ditch translation for the website

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 
         <!--Language switcher-->
         <div class="language-switcher">
-            <button id="lang-en">EN</button>
-            <button id="lang-nl">NL</button>
+            <button id="lang-en" class="lang-en">EN</button>
+            <button id="lang-nl" class="lang-nl">NL</button>
         </div>
     </nav>
 
@@ -143,68 +143,68 @@
                     <div class="skills-tabs">
                         <div class="skills-btns">
                             <button class="tab-btn active"
-                            onclick="showTab('social', event)" data-i18n="about.skills.soft.socialBtn">Sociale</button>
-                            <button class="tab-btn" onclick="showTab('personal', event)" data-i18n="about.skills.soft.personalBtn">Personal</button>
-                            <button class="tab-btn" onclick="showTab('cognitive', event)" data-i18n="about.skills.soft.cognitiveBtn">Cognitive</button>
+                            onclick="showTab('social', event)" data-i18n="skills.soft.socialBtn">Sociale</button>
+                            <button class="tab-btn" onclick="showTab('personal', event)" data-i18n="skills.soft.personalBtn">Personal</button>
+                            <button class="tab-btn" onclick="showTab('cognitive', event)" data-i18n="skills.soft.cognitiveBtn">Cognitive</button>
                         </div>
 
                         <!--SOCIAL SKILLS-->
                          <div class="skills-content" id="social">
                             <ul>
-                                <li data-i18n="about.skills.soft.social.emp">Empathy</li>
-                                <li data-i18n="about.skills.soft.social.collab">Collaborating</li>
-                                <li data-i18n="about.skills.soft.social.listen">Listening</li>
-                                <li data-i18n="about.soft.social.caring">Caring</li>
-                                <li data-i18n="about.skills.soft.social.enth">Enthusiastic</li>
+                                <li data-i18n="skills.soft.social.emp">Empathy</li>
+                                <li data-i18n="skills.soft.social.collab">Collaborating</li>
+                                <li data-i18n="skills.soft.social.listen">Listening</li>
+                                <li data-i18n="skills.soft.social.caring">Caring</li>
+                                <li data-i18n="skills.soft.social.enth">Enthusiastic</li>
                             </ul>
                         </div>
 
                         <!--PERSONAL SKILLS-->
                         <div class="skills-content hidden" id="personal">
                             <ul>
-                                <li data-i18n="about.skills.soft.personal.resp">Responsible</li>
-                                <li data-i18n="about.skills.soft.personal.pers">Perseverance</li>
-                                <li data-i18n="about.skills.soft.personal.punct">Punctual</li>
-                                <li data-i18n="about.skills.soft.personal.perf">Perfectionist</li>
+                                <li data-i18n="skills.soft.personal.resp">Responsible</li>
+                                <li data-i18n="skills.soft.personal.pers">Perseverance</li>
+                                <li data-i18n="skills.soft.personal.punct">Punctual</li>
+                                <li data-i18n="skills.soft.personal.perf">Perfectionist</li>
                             </ul>
                         </div>
 
                         <!--COGNITIVE SKILLS-->
                         <div class="skills-content hidden" id="cognitive">
                             <ul>
-                                <li data-i18n="about.skills.soft.cognitive.creative">Creative Thinking</li>
-                                <li data-i18n="about.skills.soft.cognitive.critical">Critical Thinking</li>
-                                <li data-i18n="about.skills.soft.cognitive.studious">Studious</li>
+                                <li data-i18n="skills.soft.cognitive.creative">Creative Thinking</li>
+                                <li data-i18n="skills.soft.cognitive.critical">Critical Thinking</li>
+                                <li data-i18n="skills.soft.cognitive.studious">Studious</li>
                             </ul>
                         </div>
                     </div>
 
                     <!--HARD SKILLS-->
-                    <h3 data-i18n="about.skills.hard.title">Hard Skills:</h3>
+                    <h3 data-i18n="skills.hard.title">Hard Skills:</h3>
                     <div class="skills-tabs">
                         <div class="skills-btns">
-                            <button class="tab-btn active" onclick="showTab('design', event)" data-i18n="about.skills.hard.designBtn">Design</button>
-                            <button class="tab-btn" onclick="showTab('development', event)" data-i18n="about.skills.hard.devBtn">Development</button>
+                            <button class="tab-btn active" onclick="showTab('design', event)" data-i18n="skills.hard.designBtn">Design</button>
+                            <button class="tab-btn" onclick="showTab('development', event)" data-i18n="skills.hard.devBtn">Development</button>
                         </div>
 
                         <!--DESIGN SKILLS-->
                         <div class="skills-content" id="design">
-                            <p data-i18n="about.skills.hard.figma">Figma</p>
+                            <p data-i18n="skills.hard.figma">Figma</p>
                             <div class="progress-bar">
                                 <div class="skill figma"></div>
                             </div>
 
-                            <p data-i18n="about.skills.hard.blender">Blender</p>
+                            <p data-i18n="skills.hard.blender">Blender</p>
                             <div class="progress-bar">
                                 <div class="skill blender"></div>
                             </div>
 
-                            <p data-i18n="about.skills.hard.illu">Illustrator</p>
+                            <p data-i18n="skills.hard.illu">Illustrator</p>
                             <div class="progress-bar">
                                 <div class="skill ill"></div>
                             </div>
 
-                            <p data-i18n="about.skills.hard.photo">Photoshop</p>
+                            <p data-i18n="skills.hard.photo">Photoshop</p>
                             <div class="progress-bar">
                                 <div class="skill pho"></div>
                             </div>
@@ -212,22 +212,22 @@
 
                         <!--CODE SKILLS-->
                         <div class="skills-content hidden" id="development">
-                            <p data-i18n="about.skills.hard.html">HTML</p>
+                            <p data-i18n="skills.hard.html">HTML</p>
                             <div class="progress-bar">
                                 <div class="skill html"></div>
                             </div>
 
-                            <p data-i18n="about.skills.hard.css">CSS</p>
+                            <p data-i18n="skills.hard.css">CSS</p>
                             <div class="progress-bar">
                                 <div class="skill css"></div>
                             </div>
 
-                            <p data-i18n="about.skills.hard.javasc">JAVASCRIPT</p>
+                            <p data-i18n="skills.hard.javasc">JAVASCRIPT</p>
                             <div class="progress-bar">
                                 <div class="skill js"></div>
                             </div>
 
-                            <p data-i18n="about.skills.hard.php">PHP</p>
+                            <p data-i18n="skills.hard.php">PHP</p>
                             <div class="progress-bar">
                                 <div class="skill php"></div>
                             </div>
@@ -406,25 +406,26 @@
 
             <!-- CONTACT SECTION -->
             <section class="contact" id="contact">
-                <h2>Contact</h2>
+                <h2 data-i18n="contact.title">Contact</h2>
                 <div class="contact-info">
                     <img src="icons/mailandphonenr.png" alt="email and phone number icon">
-                    <h3><strong class="info-title">Email: </strong>fake@email.com<br>
-                    <strong class="info-title">Phone nr: </strong>04 000 000</h3>
+                    <h3><strong class="info-title" data-i18n="contact.emailLabel">Email: </strong><span data-i18n="contact.email">fake@email.com</span><br>
+                    <strong class="info-title" data-i18n="contact.phoneLabel">Phone nr: </strong>
+                    <span data-i18n="contact.phone">04 000 000</span></h3>
                 </div>
                 <div class="contact-info">
                     <img src="icons/linkedin.png" alt="linkedIn icon">
-                    <h3><strong class="info-title">LinkedIn: </strong><a href="https://be.linkedin.com/in/audrey-kudjo-6a6281386">Audrey Designs</a></h3>
+                    <h3><strong class="info-title" data-i18n="contact.linkedinLabel">LinkedIn: </strong><a href="https://be.linkedin.com/in/audrey-kudjo-6a6281386" data-i18n="contact.linkedinText">Audrey Designs</a></h3>
                 </div>
                  <div class="contact-info">
                     <img src="icons/cv.png" alt="curriculum vitae icon">
-                    <h3><strong class="info-title">Extra: </strong><a href="#">Download my CV</a></h3>
+                    <h3><strong class="info-title" data-i18n="contact.extraLabel">Extra: </strong><a href="#" data-i18n="contact.cvText">Download my CV</a></h3>
                 </div>
-                <p class="contact-description">If you're interested in working together or have any questions, feel free to reach out!</p>
+                <p class="contact-description" data-i18n="contact.description">If you're interested in working together or have any questions, feel free to reach out!</p>
             </section>
     </main>
 
-    <footer>
+    <footer data-i18n="footer.text">
         <p>&copy; 2025 Audromida Designs. All rights reserved.</p>
     </footer>
 
